# term_paper_zaberov_oop_4

./: README.md  pyproject.toml
src/: main.py
src/data/hh/: vakhh_00.json  vakhh_01.json  vakhh_02.json
src/data/hh/areas/: areas.json
src/data/sj/: vaksj_00.json
src/utils/: areas.py  constants.py  utilites.py  utilities.py  vacancies.py
tests/: test_utilites.py  test_utilites_inputs.py
tests/data/sj/areas/: test_areas.json
tests/htmlcov/: d_9ca34bce5a41622c___init___py.html  d_9ca34bce5a41622c_main_py.html  d_f078e7d29f47eedc___init___py.html  d_f078e7d29f47eedc_areas_py.html  d_f078e7d29f47eedc_constants_py.html  d_f078e7d29f47eedc_utilities_py.html  d_f078e7d29f47eedc_vacancies_py.html  index.html  status.json
