[tool.poetry]
name = "term-paper-zaberov-oop-4"
version = "0.1.0"
description = ""
authors = ["zaberov.dv <zaberov.dv@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tqdm = "^4.66.1"
setuptools = "^68.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
